# rust-pragmatic-segmenter

./: COPYRIGHT  Cargo.toml  README.md
.github/workflows/: ci.yml  test.yml
examples/: benchmark.rs
src/: abbreviation_replacer.rs  lib.rs  list_item_replacer.rs  rule.rs  util.rs
tests/: issue-8.rs  test_all.rs  test_huge.rs  test_old_bugs.rs
tests/test_huge/: outputs.xz
