[package]
name = "pragmatic-segmenter"
version = "0.1.0"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onig = "6"
regex = "1"
aho-corasick = "0.7"
unic-ucd-case = "0.9.0"

[dev-dependencies]
xz2 = "0.1.6"
serde_json = "1.0"
rayon = "1.1"
indicatif = {version = "0.15", features = ["rayon"]}
