[package]
name = "pragmatic-segmenter"
version = "0.1.3"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["NLP", "SBD", "sentence", "boundary", "segmentation"]
repository = "https://github.com/simnalamburt/rust-pragmatic-segmenter"
homepage = "https://github.com/simnalamburt/rust-pragmatic-segmenter"
documentation = "https://docs.rs/pragmatic-segmenter"
description = """
Rust port of pySBD v3.1.0.
"""
categories = ["text-processing"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onig = { git = "https://github.com/rust-onig/rust-onig", rev = "c4378abcbf30d58cf5f230c0d2e6375f2be05a47" }
regex = "1"
aho-corasick = "1"
unic-ucd-case = "0.9.0"
